--- a/report/ProofCliquesAndLogDegrees.tex
+++ b/report/ProofCliquesAndLogDegrees.tex
@@ -46,21 +46,18 @@ We define a move vector $\alpha_v$ as a vector indexed by E whose entries are :
 \alpha_{uw} = \sigma(u)\sigma(w) \text{ if } uw \in E \text{ and }( (u = v) \text{ or } (w = v)), 0 \text{ otherwise}
 \end{equation*} 
 
-For a sequence $L = (v_1, ..., v_l)$ of l moves and initial state $\sigma_0$, let $\alpha_i, i \in [l]$ be the corresponding move vectors. Let $\sigma_t$ be the state just after flip of vertex $v_t$. We define matrix $A_L$ has the concatenation of the move vectors as columns.
-
-We call a sequence $\epsilon$-slowly improving if all moves yield an improvement of at most $\epsilon$.
+For a sequence $L = (v_1, ..., v_l)$ of l moves and initial state $\sigma_0$, let $\alpha_i, i \in [l]$ be the corresponding move vectors. Let $\sigma_t$ be the state just after flip of vertex $v_t$. We define matrix $A_L$ has the concatenation of the move vectors as columns. We call a sequence $\epsilon$-slowly improving if all moves yield an improvement of at most $\epsilon$.
 
 \begin{proposition}
 \label{prop}
 With high probability, there exists no $\epsilon$-slowly improving sequence of length $2n$ from any starting configuration $\sigma_0$, for $\epsilon$ is O(1/poly(n)).
 \end{proposition}
 
-Proving this proposition implies that the smoothed complexity is O(poly(n)). \\
-If there exists no such sequence, then $2n^2/\epsilon$ sequence of $2n$ moves yield an improvement of at least $2n^2$ which is the maximum improvement possible since $h(\sigma) \in [-n^2,n^2]$. \\
-Thus number of steps is $O(n^3/\epsilon)$ which is $O(poly(n))$.
+Proving this proposition implies that the smoothed complexity is polynomial in n. If there exists no such sequence, then $2n^2/\epsilon$ sequence of $2n$ moves yield an improvement of at least $2n^2$ which is the maximum improvement possible since $h(\sigma) \in [-n^2,n^2]$. Thus number of steps is $O(n^3/\epsilon)$ which is $O(poly(n))$.
 
-We introduce here the concept of critical block. A block B is defined as a subsequence of a sequence L.\\
-Let $S(L)$ be the set containing the distinct vertices in L and s(l) be its cardinality, $s_1(L)$ the number of distinct vertices in L that appear only once , $s_2(L)$ the number of distinct vertices in L that appear multiple times. Let $l(B)$ be the length of the block, i.e the number of moves.
+We introduce here the concept of critical block. A block B is defined as a subsequence of a sequence L.
+
+Let $S(L)$ be the set containing the distinct vertices in L and s(l) be its cardinality, $s_1(L)$ the number of distinct vertices in L that appear only once, $s_2(L)$ the number of distinct vertices in L that appear multiple times. Let $l(B)$ be the length of the block, i.e the number of moves.
 A block B is critical if $l(B) \geq (1 + \beta)s(B)$ and every block $B'$ strictly contained in $B$ has $l(B') < (1+\beta)s(B')$.
 
 \begin{lemma}
@@ -99,11 +96,11 @@ $h_0(\sigma_t) - h_0(\sigma_{t -1}) = 0$. Since the edges whose both endpoints a
 =& \sigma_t(v_t)Q(v_t).
 \end{split}
 \end{equation*}
-Where $(Q(v_t) = -\sum_{u \not\in T, uv_t \in E}\sigma_0(u)X_{uv_t}$ Since $|X_e| \leq n$ and the maximum neighbours of a vertex is n, $Q(v_t) \in [-n, n]$. By defining $D = 2\epsilon\mathbb Z \cap [-n, n]$, there exists some $d(v_t) \in D$ such that $|Q(v_t) - d(v_t)| \leq \epsilon$.\\
+where $(Q(v_t) = -\sum_{u \not\in T, uv_t \in E}\sigma_0(u)X_{uv_t}$ Since $|X_e| \leq n$ and the maximum neighbours of a vertex is n, $Q(v_t) \in [-n, n]$. By defining $D = 2\epsilon\mathbb Z \cap [-n, n]$, there exists some $d(v_t) \in D$ such that $|Q(v_t) - d(v_t)| \leq \epsilon$.\\
 \begin{equation*}
 \begin{split}
-h_2(\sigma_t) - h_2(\sigma_{t-1}) &= \langle\alpha ', X \rangle \text{ Where }\\
-\alpha_t ' &=  
+h_2(\sigma_t) - h_2(\sigma_{t-1}) = &\langle\alpha ', X \rangle \text{ where }\\
+\alpha_t ' =  &
 \begin{cases}
 -\sigma_t(u)\sigma_t(w) & uw \in E, v_t \in \{u, w\}, \{u, w\} \subseteq T \\
 0 & otherwise
@@ -129,11 +126,11 @@ By using  $rank(L) \geq (1+\theta)s(L)$, we get the desired bound. \\
 
 We will prove the proposition by considering different sequences of size 2n.\\
 Let $ p > 1$, l(L) = 2n : \\
-$E$ is the event corresponding to $\exists L, \sigma_0, \text{ s.t. L is }\epsilon\text{-slowly improving from }\sigma_0 $\\
-$E_1$ is the event corresponding to $\exists L, \sigma_0, \text{ s.t. L is }\epsilon\text{-slowly improving from }\sigma_0 \text{ and }S(L) \not\subseteq H$.\\
-$E_2$ is the event corresponding to $\exists L, \sigma_0,\text{ s.t. L is }\epsilon\text{-slowly improving from }\sigma_0\text{ and }S(L) \subseteq H\text{ and }s(L) < r$. \\
-$E_3$   is the event corresponding to $\exists \text{ critical block } B, \sigma_0,\text{ s.t. B is }\epsilon\text{-slowly improving from }\sigma_0\text{ and }S(L) \subseteq H \text{ , } s(B) = r \text{ and } s_0(B) \leq s(B) / p$ \\
-$E_4$   is the event corresponding to $\exists \text{ critical block } B, \sigma_0,\text{ s.t. B is }\epsilon\text{-slowly improving from }\sigma_0\text{ and }S(L) \subseteq H \text{ , } s(B) = r \text{ and } s_0(B) > s(B) / p$ \\
+$E$ is the event corresponding to $\exists L, \sigma_0, \text{ s.t. L is }\epsilon$-slowly improving from some $\sigma_0 $\\
+$E_1$ is the event corresponding to $\exists L, \sigma_0, \text{ s.t. L is }\epsilon$-slowly improving from some $\sigma_0$ and $S(L) \not\subseteq H$.\\
+$E_2$ is the event corresponding to $\exists L, \sigma_0,\text{ s.t. L is }\epsilon$-slowly improving from some $\sigma_0$ and $S(L) \subseteq H\text{ and }s(L) < r$. \\
+$E_3$   is the event corresponding to $\exists \text{ critical block } B, \sigma_0,\text{ s.t. B is }\epsilon$-slowly improving from some $\sigma_0$ and $S(L) \subseteq H \text{ , } s(B) = r \text{ and } s_0(B) \leq s(B) / p$ \\
+$E_4$   is the event corresponding to $\exists \text{ critical block } B, \sigma_0,\text{ s.t. B is }\epsilon$-slowly improving from some $\sigma_0$ and $S(L) \subseteq H \text{ , } s(B) = r \text{ and } s_0(B) > s(B) / p$ \\
 By the lemma \ref{critical} on existence of critical blocks and the fact that if $s(L) = n$ implies that some vertex with degree at most log(n) is chosen we can have this bound:
 \begin{equation*}
 P(E) \leq P(E_1) + P(E_2) + P(E_3) + P(E_4)
@@ -163,7 +160,7 @@ P(E_3) \leq  \sum_{s < n}n^{2s}(\dfrac{2n}{\epsilon})^{s/p}(64\phi\epsilon)^{s} 
 \end{equation*}
 
 For $E_4$, we use a trick to show that the $rank(A_L) \geq 1.25s(B) - s(B)(1 - 1/p)$. We choose some $w \in V \setminus H$. For each vertex v which has a non-flipped neighbour, we delete that edge and add vw to the graph. This does not change $rank(A_L)$ since the row added is the same as the row deleted times 1 or -1. Now we add edges from w to the remaining vertices on the clique, increasing the rank by at most $s(B)(1 - 1/p)$. The subgraph G' determined by $H \cup \{w\}$ is thus complete and we can use  lemma \ref{critical} to have $rank_{G'}(A_L) \geq 1.25 s(B)$. Then $rank_G(A_L) \geq 1.25s(B) - s(B)(1 - 1/p)$.
-By lemman \ref{boundN} we have :
+By lemma \ref{boundN} we have :
 \begin{equation*}
 P(E_4) \leq  \sum_{s < n}n^{2s}(\dfrac{2n}{\epsilon})^{s}(64\phi\epsilon)^{5s/4 - s(1 - 1/p)} \leq \sum_{s < n}(Cn^{3}\phi^{1/4}\epsilon^{(1/p - 3/4)})^{s}
 \end{equation*}
@@ -193,13 +190,13 @@ We saw previously that if such proposition is true then the smoothed complexity 
 We now separate this probability into multiple events.
 Let $p_1, p_2 > 1$ : \\
 We will prove the proposition by considering different sequences of size 2n.\\
-$E$ is the event corresponding to $\exists L, l(L) = 4n, \sigma_0, \text{ s.t. L is }\epsilon\text{-slowly improving from }\sigma_0 $\\
-$E_1$ is the event corresponding to $\exists, l(L) = 2n L, \sigma_0, \text{ s.t. L is }\epsilon\text{-slowly improving from }\sigma_0 \text{ and }S(L) \not\subseteq H_1 \cup H_2$.\\
-$E_2$ is the event corresponding to $\exists L, l(L) = 2n, \sigma_0,\text{ s.t. L is }\epsilon\text{-slowly improving from }\sigma_0\text{ and }S(L) \subseteq H_1\text{ and }s(L) < r_1$. \\
-$E_3$   is the event corresponding to $\exists \text{ critical block } B, l(B) \leq 2n, \sigma_0,\text{ s.t. B is }\epsilon\text{-slowly improving from }\sigma_0\text{ and }S(L) \subseteq H_1 \text{ , } s(B) = r_1 \text{ and } s_0(B) \leq s(B) / p_1$ \\
-$E_4$   is the event corresponding to $\exists \text{ critical block } B, l(B) \leq 2n, \sigma_0,\text{ s.t. B is }\epsilon\text{-slowly improving from }\sigma_0\text{ and }S(L) \subseteq H_1 \text{ , } s(B) = r_1 \text{ and } s_0(B) > s(B) / p_1$ \\
+$E$ is the event corresponding to $\exists L, l(L) = 4n, \sigma_0, \text{ s.t. L is }\epsilon\text{-slowly}$ improving from some $\sigma_0 $\\
+$E_1$ is the event corresponding to $\exists, l(L) = 2n L, \sigma_0, \text{ s.t. L is }\epsilon\text{-slowly} $ improving from  some $\sigma_0$  and $S(L) \not\subseteq H_1 \cup H_2$.\\
+$E_2$ is the event corresponding to $\exists L, l(L) = 2n, \sigma_0,\text{ s.t. L is }\epsilon\text{-slowly} $ improving from some $\sigma_0$ and $S(L) \subseteq H_1\text{ and }s(L) < r_1$. \\
+$E_3$   is the event corresponding to $\exists$ critical block  $B, l(B) \leq 2n, \sigma_0$, s.t. B is $\epsilon\text{-slowly} $ improving from some $\sigma_0$ and $S(L) \subseteq H_1 \text{ , } s(B) = r_1 \text{ and } s_0(B) \leq s(B) / p_1$ \\
+$E_4$   is the event corresponding to $\exists$ critical block  $B, l(B) \leq 2n, \sigma_0$, s.t. B is $\epsilon\text{-slowly} $ improving from some $\sigma_0$ and $S(L) \subseteq H_1 \text{ , } s(B) = r_1 \text{ and } s_0(B) > s(B) / p_1$ \\
 $E_5, E_6, E_7$ correspond respectively to $E_2, E_3, E_4$ substituting $H_1$ by $H_2$ and $r_1$ by $r_2$.\\
-$E_8$  is the event corresponding to $\exists L, l(L) = 4n, \sigma_0,\text{ s.t. L is }\epsilon\text{-slowly improving from }\sigma_0\text{ and }S(L) \subseteq H_1\cup H_2.$ \\
+$E_8$  is the event corresponding to $\exists L, l(L) = 4n, \sigma_0,\text{ s.t. L is }\epsilon\text{-slowly} $ improving from some $\sigma_0$ and $S(L) \subseteq H_1\cup H_2.$ \\
 For event $E_1$ to $E_7$ we can show that they can be arbitrarly small with good choice of $\epsilon, p_1, p_2$ with a similar proof than in section \ref{coreProof}.\\
 Let us observe $E_8$, we use lemma \ref{edgeDisjoint} to show that the existence of such sequence L implies the existence of a two sequences $L_1$, and $L_2$ where L' has vertices only in $H_1$ and  only in $H_2$. One of them has length at least 2n, we can therefore have this bound :
 \begin{equation*}
@@ -211,5 +208,48 @@ P(E) \leq \sum_{i = 1}^8 P(E_i)
 \end{equation*} 
 We have proved proposition \ref{secondProp}. \\
 We can extend this idea to graphs with a constant number of edge-disjoint cliques.
+
+\section{Trying to extend this to any number of cliques}
+
+In order to allow any number of cliques we must find something smarter for sequences containing vertices from $H_1$ and $H_2$.\\
+We can always find a critical block B, but the issue will be that  s(B) may belong to $H_1$ and $H_2$ so we do not have a bound of the rank. However we can prove the same bound in the rank with something similar to the proof of Lemma 4.1 [3].\\
+
+
+\begin{lemma}
+For a graph with at least two edge-disjoint cliques $H_1$ and $H_2$, with $|H_1| = r_1, |H_2| = r_2$  . Given a sequence of consisting of s(L) vertices where : 
+\begin{equation*}
+|s(L) \cap H_1| < r_1\text{ and } |s(L) \cap H_2| < r_2, s(L) \geq (1 + \beta)s
+\end{equation*}
+There exists a critical block B in L such that :
+\begin{equation*}
+rank(B) \geq \frac{1 +4\beta}{1 + 3\beta}s(B)
+\end{equation*}
+\end{lemma}
+
+\textit{Proof.} The existence of a critical block is trivial. We take the minimum block w.r.t inclusion that satisfies $l(B) \geq (1 +  \beta)s(B)$, such a block exists since the whole sequence satisfies this.\\
+To study the rank, we can reorder the moves in order to obtain $B_1B_2$ where $s(B_1) \subset H_1, s(B_2) \subset H_2$.
+$rank(B) = rank(B_1B_2)$. \\
+Observe that $B_1$ and $B_2$ are divided in transition blocks (containing repeated vertices) and singleton blocks (containing non-repeated vertices). We call $b(i)$ the number of transition blocks in which $i$ appear.
+\begin{equation*}
+rank(B) \geq s_1(B) + \sum_i b(i)
+\end{equation*}
+There are $b(i)$ different transition blocks in which $i$ appear, each of this transition block are separated by a vertex $w_{ij}$ with $1 <j \geq b(i)$. Let call $v_{H_1} \in H_1 \not \in s(B)$ such vertex exists, and let us define $v_{H_2}$ respectively in $H_2$. \\
+We select for each v in B the rows corresponding to the edges $\{v, v_{H_1}\}$ if $v \in H_1$ otherwise we select $\{i, v_{H_2}\}$, we also select for each repeated vertex i, the rows $\{i, w_{ij}\}$, we claim that there are independent.\\
+
+We consider the sumbatrix $M_i$ defined by the rows we picked concerning i, and at columns $t_{ij}$. Because the rank do not depend on the original state, we can assume the first column is ones. We can then multiply each column so the first row, consist only of ones. We remind here that the first row correspond to the edge between $i$ and an unflipped vertex of the clique $i$ belongs to. Since $w_ij$ are singletons, the rows are therefore 1 before t($w_{ij}$) and -1 after. This has full rank $b(i)$. \\
+
+\begin{equation*}
+\begin{split}
+rank(B) & \geq s_1(B) + \sum_{i}b(i) = \sum_i^k s(T_i)\\
+&\geq s_1(B) + \frac{1}{1 + \beta}\sum_i^k s(T_i)\\
+&\geq s_1(B) + \frac{l(B) - s_1(B)}{1 + \beta}\\
+& \geq \frac{l(B) + \beta s_1(B)}{1 + \beta}\\
+&\geq s(B) + \frac{\beta s_1(B)}{1 + \beta}\\
+\end{split}
+\end{equation*}  
+
+Altogether with the fact that $rank(B) \geq s(B) + s_2(B)/2$ and the fact that $s(B) = s_1(B) + s_2(B)$ we meet the required bound.\\
+
+With label \ref{boundN}, we can bound the probability for such sequences but we still miss the case in which $|H_1| \cup s(L) = r_1$, same for $H_2$
 
 \end{document} 
