removing case distinction

--- a/report/FinalReport/FinalReportNH.tex
+++ b/report/FinalReport/FinalReportNH.tex
@@ -5,6 +5,7 @@
 \usepackage{amssymb}
 \usepackage{xcolor}
 \usepackage{mathtools}
+\usepackage{verbatim}
 \newtheorem{theorem}{Theorem}[section]
 \newtheorem{corollary}{Corollary}[theorem]
 \newtheorem{lemma}[theorem]{Lemma}
