--- a/report/FinalReport/FinalReportNH.tex
+++ b/report/FinalReport/FinalReportNH.tex
@@ -15,9 +15,12 @@
 
 \begin{document}
 \maketitle
-\include{abstract}
-\include{Introduction}
-\include{Notation_lemmas}
-\include{ProofOneClique}
+\input{abstract}
+\input{Introduction}
+\input{Notation_lemmas}
+\input{ProofOneClique}
+\input{ProofMultipleCliques}
+\input{CliqueWithMatching}
+%\input{Generalisation}
 
 \end{document}
