--- a/report/FinalReport/FinalReportNH.tex
+++ b/report/FinalReport/FinalReportNH.tex
@@ -21,6 +21,6 @@
 \input{ProofOneClique}
 \input{ProofMultipleCliques}
 \input{CliqueWithMatching}
-%\input{Generalisation}
+\input{Generalisation}
 
 \end{document}
