--- a/report/FinalReport/ProofMultipleCliques.tex
+++ b/report/FinalReport/ProofMultipleCliques.tex
@@ -1,5 +1,5 @@
 \section{Proof for graphs with multiple edge-disjoint cliques}
-Let $G = (V,E)$ be a graph with $n$ vertices and $m$ edges. Assume that this graph contains cliques $H_1, ... H_o$ of $r_1, ... , r_o$ vertices and that the degree of vertices in the set $G \setminus H$ is at most $log(n)$. Furthermore, there exists no edge going from one clique to another.\\
+Let $G = (V,E)$ be a graph with $n$ vertices and $m$ edges. Assume that this graph contain a family $H$ of cliques $H_1, ... H_h$ of $r_1, ... , r_h$ vertices and that the degree of vertices in the set $G \setminus \bigcup_{i = 1}^h H_i$ is at most $log(n)$. Furthermore, there exists no edge going from one clique to another.\\
 
 The precedent proof can be easily extended to those graphs. We will prove a similar proposition, but on longer sequences.
 
