--- a/report/FinalReport/ProofOneClique.tex
+++ b/report/FinalReport/ProofOneClique.tex
@@ -1,4 +1,5 @@
 \section{Proof for graphs with one clique and low degrees vertices}
+\label{sec::firstProof}
 Let $G = (V,E)$ be a graph with $n$ vertices and $m$ edges. Assume that this graph contains a clique $H$ of $r$ vertices and that the degree of vertices in the set $G \setminus H$ is at most $log(n)$. \\
 
 \begin{proposition}
@@ -11,38 +12,38 @@ If there exists no such sequence, then $2n^2/\epsilon$ sequence of $2n$ moves yi
 Thus number of steps is $O(n^3/\epsilon)$ which is $O(poly(n))$. \\
 
 We will prove the proposition by considering different sequences of size 2n.\\
-Let $ p > 1$, l(L) = 2n : \\
-$E$ is the event corresponding to $\exists L, \sigma_0, \text{ s.t. L is }\epsilon\text{-slowly improving from }\sigma_0 $\\
-$E_1$ is the event corresponding to $\exists L, \sigma_0, \text{ s.t. L is }\epsilon\text{-slowly improving from }\sigma_0 \\
+Let l(L) = 2n : \\
+$D$ is the event corresponding to $\exists L, \sigma_0, \text{ s.t. L is }\epsilon\text{-slowly improving from }\sigma_0 $\\
+$D_1$ is the event corresponding to $\exists L, \sigma_0, \text{ s.t. L is }\epsilon\text{-slowly improving from }\sigma_0 \\
 \text{ and }S(L) \not\subseteq H$.\\
-$E_2$ is the event corresponding to $\exists L, \sigma_0,\text{ s.t. L is }\epsilon$-slowly  improving from $\sigma_0$ and $S(L) \subseteq H\text{ and }s(L) < r$. \\
-$E_3$   is the event corresponding to $\exists \text{ critical block } B, \sigma_0$, s.t. B is $\epsilon$-slowly improving from $\sigma_0$ and $S(L) \subseteq H \text{ , } s(B) = r $
+$D_2$ is the event corresponding to $\exists L, \sigma_0,\text{ s.t. L is }\epsilon$-slowly  improving from $\sigma_0$ and $S(L) \subseteq H\text{ and }s(L) < r$. \\
+$D_3$   is the event corresponding to $\exists \text{ critical block } B, \sigma_0$, s.t. B is $\epsilon$-slowly improving from $\sigma_0$ and $S(L) \subseteq H \text{ , } s(B) = r $\\
 By the lemma \ref{critical} on existence of critical blocks and the fact that if $s(L) = n$ implies that some vertex with degree at most log(n) is chosen we can have this bound:
 
 \begin{equation*}
-P(E) \leq P(E_1) + P(E_2) + P(E_3)
+P(D) \leq P(D_1) + P(D_2) + P(D_3)
 \end{equation*}
 
-Consider $E_1$. Fix $L$ and $\sigma_0$ then there must be a vertex $v \in S(L)$ whose degree is at most $log(n)$. By lemma  \ref{noise}, the probability that $\alpha_v \in [0, \epsilon] = \phi \epsilon$. Using union bound on the number of vertices and the starting configuration of those vertices we have:
+Consider $D_1$. Fix $L$ and $\sigma_0$ then there must be a vertex $v \in S(L)$ whose degree is at most $log(n)$. By lemma  \ref{noise}, the probability that $\alpha_v \in [0, \epsilon] = \phi \epsilon$. Using union bound on the number of vertices and the starting configuration of those vertices we have:
 \begin{equation}
-P(E_1)  \leq 2^{log(n)}n \phi \epsilon
+P(D_1)  \leq 2^{log(n)}n \phi \epsilon
 \end{equation}
 By taking$\epsilon = n^{-2 - \eta} \phi^{-1}$ with $\eta > 0$ there exists no such sequence with high probability. \\
 
-Now consider $E_2$. We consider the subgraph G' induced by the restriction to the clique H. We observe that $rank_G'(A_L) \leq rank_G(A_L)$ Since $G'(A_L)$ is a submatrix of $G(A_L)$.\\ 
-By lemma \ref{critical}, there exists a critical block B whose rank is at least 1.25 s(B).We now can use lemma \ref{bound} to have this bound:
+Now consider $D_2$. We consider the subgraph G' induced by the restriction to the clique H. We observe that $rank_G'(A_L) \leq rank_G(A_L)$ Since $G'(A_L)$ is a submatrix of $G(A_L)$.\\ 
+By lemma \ref{critical}, there exists a critical block B whose rank is at least 1.25 s(B).We now can use lemma \ref{boundN} to have this bound:
 \begin{equation*}
 P(B \text{ is }\epsilon \text {-slowly improving from some }\sigma) \leq 2(\frac{4n}{\epsilon})^{s(B)}(8\phi\epsilon)^{\frac{5s(B)}{4}}
 \end{equation*}
 Because the number of blocks using s letters is $n^{2s}$, we have:
 \begin{equation*}
-P(E_2) \leq 2 \sum_{s < n}(64\phi^{5/4}n^3\epsilon^{1/4})^s
+P(D_2) \leq 2 \sum_{s < n}(64\phi^{5/4}n^3\epsilon^{1/4})^s
 \end{equation*}
 By choosing $\epsilon = n^{-(12 + \eta)}\phi^{-5}$ this sums goes to zero.\\
 
-For $E_3$, we use a trick to show that the $rank(A_L) \geq 1.25s(B) - (s(B) - s_0(B))$. We choose some $w \in V \setminus H$. For each vertex v which has a non-flipped neighbour, we delete that edge and add vw to the graph. This does not change $rank(A_L)$ since the row added is the same as the row deleted times 1 or -1. Now we add edges from w to the remaining vertices on the clique, increasing the rank by at most $s(B) - s_0(B)$. The subgraph G' determined by $H \cup \{w\}$ is thus complete and we can use  lemma \ref{critical} to have $rank_{G'}(A_L) \geq 1.25 s(B)$. Then $rank_G(A_L) \geq 1.25s(B) - (s(B) - s_0(B))$.
+For $D_3$, we use a trick to show that the $rank(A_L) \geq 1.25s(B) - (s(B) - s_0(B))$. We choose some $u \in V \setminus H$. For each vertex v which has a non-flipped neighbour, we delete that edge and add $uv$ to the graph. This does not change $rank(A_L)$ since the row added is the same as the row deleted times 1 or -1. Now we add edges from $u$ to the remaining vertices on the clique, increasing the rank by at most $s(B) - s_0(B)$. The subgraph G' determined by $H \cup \{u\}$ is thus complete and we can use  lemma \ref{critical} to have $rank_{G'}(A_L) \geq 1.25 s(B)$. Then $rank_G(A_L) \geq 1.25s(B) - (s(B) - s_0(B))$.
 By lemma \ref{boundN} we have :
 \begin{equation*}
-P(E_3) \leq  \sum_{s < n}n^{2s}(\dfrac{2n}{\epsilon})^{s_0}(64\phi\epsilon)^{s/4 + s_0} \leq \sum_{s < n}(Cn^{3}\phi^{5/4}\epsilon^{1/4})^{s}
+P(D_3) \leq  \sum_{s < n}n^{2s}(\dfrac{2n}{\epsilon})^{s_0}(64\phi\epsilon)^{s/4 + s_0} \leq \sum_{s < n}(Cn^{3}\phi^{5/4}\epsilon^{1/4})^{s}
 \end{equation*}
 By choosing $\epsilon = n^{-(12 + \eta)}\phi^{-5}$ this sums goes to zero, thus concluding the proof.
