notation retouchée, manque le corollaire

--- a/report/FinalReport/FinalReportNH.tex
+++ b/report/FinalReport/FinalReportNH.tex
@@ -10,6 +10,7 @@
 \newtheorem{corollary}{Corollary}[theorem]
 \newtheorem{lemma}[theorem]{Lemma}
 \newtheorem{proposition}[theorem]{Proposition}
+\newcommand{\rank}{\text{rank}}
 \DeclarePairedDelimiter{\ceil}{\lceil}{\rceil}
 \title{Smoothed complexity of local max-cut for special graphs}
 
