--- a/report/FinalReport/Introduction.tex
+++ b/report/FinalReport/Introduction.tex
@@ -6,7 +6,7 @@ h(\sigma) = \dfrac{1}{2}\sum_{uv \in E}(1 - \sigma(u)\sigma(v))w(uv)
 \end{equation*}
 is locally optimal. a locally optimal state $\sigma$ is defined as :
 \begin{equation*}
-\not \exists \sigma' \in \{-1, 1\}^V,  h(\sigma') > h(\sigma) \text{ and } d(\sigma, \sigma') = 1
+\neg \exists \text{  }\sigma' \in \{-1, 1\}^V,  h(\sigma') > h(\sigma) \text{ and } d(\sigma, \sigma') = 1
 \end{equation*}
 Where $d(\sigma, \sigma')$ is the hamming distance between those two partitions. In other words, there exists no vertex v such that, if the vertex is flipped, i.e. change the sign of $\sigma(v)$, then $h(\sigma)$ increases.\\ 
 
