--- a/report/FinalReport/Notation_lemmas.tex
+++ b/report/FinalReport/Notation_lemmas.tex
@@ -4,46 +4,52 @@ Let $X = (X_e)_{e \in E} \in [-1, 1]^E$ a random vector with independent entries
 
 \begin{lemma} (Lemma 2.1 \cite{angel2016local})\\
 \label{noise}
-Let $\alpha_1, ..., \alpha_k$ be $k$ linearly independent vectors in $\mathbb{Z}^E$. Then the joint density of$ (\langle \alpha_i, X \rangle)_{i \leq k}$ is bounded by $\phi^k$. In particular, if sets $J_i \in \mathbb R$ have measure at most $\epsilon$ each, then 
+Let $\gamma_1, ..., \gamma_k$ be $k$ linearly independent vectors in $\mathbb{Z}^E$. Then the joint density of$ (\langle \gamma_i, X \rangle)_{i \leq k}$ is bounded by $\phi^k$. In particular, if sets $J_i \in \mathbb R$ have measure at most $\epsilon$ each, then 
 \begin{equation*}
-\mathcal{P} (\forall i \in [k], \langle \alpha_i, X \rangle \in J_i) \leq (\phi \epsilon)^k
+\mathcal{P} (\forall i \in [k], \langle \gamma_i, X \rangle \in J_i) \leq (\phi \epsilon)^k
 \end{equation*}
 \end{lemma}
 
-We define a move vector $\alpha_v$ as a vector indexed by E whose entries are :
+We define a move vector $\alpha(v)$ as a vector indexed by E whose entries are :
 \begin{equation*}
-\alpha_{uw} = 
+\alpha(v)_{uw} = 
 \begin{cases}
 \sigma(u)\sigma(w) &\text{ if } uw \in E \text{ and }( (u = v) \text{ or } (w = v)) \\
  0 &\text{ otherwise}
  \end{cases}
 \end{equation*} 
 
-For a sequence $L = (v_1, ..., v_l)$ of l moves and initial state $\sigma_0$, let $\alpha_i, i \in [l]$ be the corresponding move vectors. Let $\sigma_t$ be the state just after flip of vertex $v_t$. We define matrix $A_L$ as the concatenation of the move vectors as columns. We call a sequence $\epsilon$-slowly improving if all moves yield an improvement of at most $\epsilon$.
+For a sequence $L = (v_1, ..., v_l)$ a word of vertices and initial state $\sigma_0$, let $\alpha(v_i), i \in [l]$ be the corresponding move vectors. Let $\sigma_t$ be the state just after flip of vertex $v_t$, remark that it depends only on the initial state $\sigma_0$ and the vertices in the sequence.
+The improvement made by a move is defined as :
+\begin{equation*}
+h(\sigma_t) - h(\sigma_{t-1} = \langle \alpha(v_t), X \rangle
+\end{equation*}
+Where $X$ is the edge weight vector.\\ 
+A matrix $A_L$ is defined as the concatenation of the move vectors as columns. We call a sequence $\epsilon$-slowly improving if all moves yield an improvement of at most $\epsilon$.
 
 We introduce here the concept of critical block. A block $B$ is defined as a substring of a sequence $L$.
 
 Let $S(L)$ be the set containing the distinct vertices in $L$ and $s(L)$ be its cardinality, $s_1(L)$ the number of distinct vertices in $L$ that appear only once, $s_2(L)$ the number of distinct vertices in $L$ that appear multiple times. Let $l(B)$ be the length of the block, i.e. the number of moves.
-A block $B$ is critical if $l(B) \geq (1 + \beta)s(B)$ and every block $B'$ strictly contained in $B$ has $l(B') < (1+\beta)s(B')$.
+A block $B$ is critical if: for $\beta > 0$, $l(B) \geq (1 + \beta)s(B)$ and every block $B'$ strictly contained in $B$ has $l(B') < (1+\beta)s(B')$.
 
 \begin{lemma}
 \label{critical}
 (Lemma 4.1 \cite{angel2016local}) \\
 For complete graphs with n vertices: fix any positive integer $n \geq 2$ and a constant $\beta > 0$. Given a sequence consisting of $s(L) < n$ letters and with length $l(L) \geq (1 +\beta)s$, there exists a critical block $B$ in $L$. Moreover, a critical block satisfies $l(B) = \ceil{(1 + \beta)s(B)}$.
-\text{Moreover }$rank(B) \geq \dfrac{1+4\beta}{1 + 3\beta}s(B)$
+\text{Moreover }$\rank(B) \geq \dfrac{1+4\beta}{1 + 3\beta}s(B)$
 \end{lemma} 
 
 \begin{lemma} \leavevmode \\
 \label{boundN}
-If $s(L) < n$, and $rank(L) \geq (1+\theta)s(L)$ then \\
+If $s(L) < n$, and $\rank(L) \geq s(L)$ then \\
 \begin{equation*}
-P(L \text{ is }\epsilon\text{-slowly improving from some }sigma_0)  \leq (2n/\epsilon)^{s_0}(64\phi\epsilon)^{rank(A_L)}
+P(L \text{ is }\epsilon\text{-slowly improving from some }sigma_0)  \leq (2n/\epsilon)^{s_0}(64\phi\epsilon)^{\rank(A_L)}
 \end{equation*}
 Where $s_0$ is the number of vertices that have at least one neighbor which is not in L. 
 \end{lemma}
 
 \textit{Proof.} Let $I$ be the set of the edges corresponding to independent rows in $A_L$. They do not depend on $\sigma_0$ since the starting configuration only multiplies each row by 1 or -1.\\
-Define $T = \{v \in V: vw \in I \text{ or } v \in S(L)$\}. $|T| \leq 2 rank(A_L) + s(L)$. \\
+Define $T = \{v \in V: vw \in I \text{ or } v \in S(L)$\}. $|T| \leq 2 \rank(A_L) + s(L)$. \\
 We split $h(\sigma)$ in three part $h_0(\sigma), h_1(\sigma), h_2(\sigma)$ Where $h_i$ is the restriction of $h$ to the edges that have $i$ endpoints in $T$. \\
 $h_0(\sigma_t) - h_0(\sigma_{t -1}) = 0$. Since the edges whose both endpoints are not flipped do not provoke a change in the total weight cut. \\
 \begin{equation*}
@@ -63,7 +69,7 @@ h_2(\sigma_t) - h_2(\sigma_{t-1}) = &\langle\alpha ', X \rangle \text{ where }\\
 \end{cases}
 \end{split}
 \end{equation*}
-Since $\alpha_t'$ concerns only the rows linearly independant from $A_L$, $rank([\alpha_t']_{t \leq l}) = rank(A_L)$. \\
+Since $\alpha_t'$ concerns only the rows linearly independant from $A_L$, $\rank([\alpha_t']_{t \leq l(L)}) = \rank(A_L)$. \\
 \begin{equation*}
 h(\sigma_t) - h(\sigma_{t-1} = \langle\alpha ', X \rangle +   \sigma_t(v_t)d_t + \delta_t \text{    where }|\delta_t| \leq \epsilon
 \end{equation*}
@@ -73,9 +79,9 @@ Since  $|\delta_t| \leq \epsilon$, L is $\epsilon$-slowly improving implies that
 | \langle\alpha ', X \rangle +   \sigma_t(v_t)d_t| \leq 2\epsilon \quad \forall t \leq l
 \end{equation*}
 
-We need that $ \langle\alpha ', X \rangle \in [- d_t -2\epsilon, -d_t + 2\epsilon] \cup [d_t - 2\epsilon, d_t + 2\epsilon]$, Using lemma \ref{noise}, this is at most $8\phi\epsilon^{rank(A_L)}$. Using union bound over $\sigma_{t \in T}$ and $d$ :
+We need that $ \langle\alpha ', X \rangle \in [- d_t -2\epsilon, -d_t + 2\epsilon] \cup [d_t - 2\epsilon, d_t + 2\epsilon]$, Using lemma \ref{noise}, this is at most $8\phi\epsilon^{\rank(A_L)}$. Using union bound over $\sigma_{t \in T}$ and $d$ :
 \begin{equation*}
-\text{P(L is }\epsilon\text{-slowly improving from some }\sigma_0 \leq 2^{2rank(A_L) + s}(\frac{2n}{\epsilon})^{s_0}(8\phi\epsilon)^{rank(A_L)}
+\text{P(L is }\epsilon\text{-slowly improving from some }\sigma_0 \leq 2^{2\rank(A_L) + s}(\frac{2n}{\epsilon})^{s_0}(8\phi\epsilon)^{\rank(A_L)}
 \end{equation*}
 Remark the $s_0$ instead of $s$ in exponent, since vertices that have no-non flipped neighbors need not be taken in this bound. \\
-By using  $rank(L) \geq (1+\theta)s(L)$, we get the desired bound. \\
+By using  $\rank(L) \geq s(L)$, we get the desired bound. \\
